--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body id="home">
     <!-- navbar -->
-    <!-- navbar -->
+    <nav id="navbar">
+        <h1>
+            <span class="text-primary"><i class="fas fa-book-open"></i> FIR</span> MA</h1>
+        <ul>
+            <li><a href="#home">Avaleht</a></li>
+            <li><a href="#what">Teenused</a></li>
+            <li><a href="#who">Meeskond</a></li>
+            <li><a href="#clients">Kliendid</a></li>
+            <li><a href="#contact">Kontakt</a></li>
+        </ul>
+    </nav>
     <!-- header - showcase -->
     
     <!-- #what -->
