Vitriini osa sai valmis

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         </ul>
     </nav>
     <!-- header - showcase -->
-    
+    <header id="showcase">
+        <div class="showcase-content">
+            <h1 class="heading">Lihtsalt Tee Midagi</h1>
+            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, cumque.</p>
+            <a href="#what" class="btn btn-primary">Loe Rohkem</a>
+        </div>
+    </header>
     <!-- #what -->
     <section id="what">
 
