Tegin info loomise lõpuni

--- a/index.html
+++ b/index.html
@@ -1,56 +1,92 @@
 <!DOCTYPE html>
 <html lang="et">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- fas -->
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/088e4b290a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/088e4b290a.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Company Web</title>
-</head>
-<body id="home">
+  </head>
+  <body id="home">
     <!-- navbar -->
     <nav id="navbar">
-        <h1>
-            <span class="text-primary"><i class="fas fa-book-open"></i> FIR</span> MA</h1>
-        <ul>
-            <li><a href="#home">Avaleht</a></li>
-            <li><a href="#what">Teenused</a></li>
-            <li><a href="#who">Meeskond</a></li>
-            <li><a href="#clients">Kliendid</a></li>
-            <li><a href="#contact">Kontakt</a></li>
-        </ul>
+      <h1>
+        <span class="text-primary"><i class="fas fa-book-open"></i> FIR</span>
+        MA
+      </h1>
+      <ul>
+        <li><a href="#home">Avaleht</a></li>
+        <li><a href="#what">Teenused</a></li>
+        <li><a href="#who">Meeskond</a></li>
+        <li><a href="#clients">Kliendid</a></li>
+        <li><a href="#contact">Kontakt</a></li>
+      </ul>
     </nav>
     <!-- header - showcase -->
     <header id="showcase">
-        <div class="showcase-content">
-            <h1 class="heading">Lihtsalt Tee Midagi</h1>
-            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, cumque.</p>
-            <a href="#what" class="btn btn-primary">Loe Rohkem</a>
-        </div>
+      <div class="showcase-content">
+        <h1 class="l-heading">Lihtsalt Tee Midagi</h1>
+        <p class="par">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
+          cumque.
+        </p>
+        <a href="#what" class="btn btn-primary">Loe Rohkem</a>
+      </div>
     </header>
     <!-- #what -->
-    <section id="what">
-
+    <section id="what" class="bg-light py-1">
+      <div class="container">
+        <h2 class="m-heading text-center p-1">
+          Mida Me<span class="text-primary"> Pakume</span>
+        </h2>
+        <div class="items">
+          <div class="item text-center p-1">
+            <i class="fab fa-codepen fa-2x p-1"></i>
+            <div>
+              <h3>Kirjutame</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab,
+                beatae. Assumenda ipsa veniam illo.
+              </p>
+            </div>
+          </div>
+          <div class="item text-center p-1">
+            <i class="fas fa-pencil-alt fa-2x p-1"></i>
+            <div>
+              <h3>Kujundame</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                debitis ad in.
+              </p>
+            </div>
+          </div>
+          <div class="item text-center p-1">
+            <i class="fas fa-bug fa-2x p-1"></i>
+            <div>
+              <h3>Silume</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum
+                blanditiis deserunt dolorem reiciendis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- #who -->
-    <section id="who">
-        
-    </section>
+    <section id="who"></section>
 
     <!-- #clients -->
-    <section id="clients">
-
-    </section>
+    <section id="clients"></section>
 
     <!-- #contact -->
-    <section id="contact">
-        
-    </section>
+    <section id="contact"></section>
 
     <!-- #footer -->
-    <footer id="footer">
-
-    </footer>
-</body>
+    <footer id="footer"></footer>
+  </body>
 </html>
