Tegin meeskonna osa lõpuni

--- a/index.html
+++ b/index.html
@@ -78,15 +78,45 @@
       </div>
     </section>
     <!-- #who -->
-    <section id="who"></section>
+    <section id="who">
+        <!-- img -->
+        <div class="who-img"></div>
+        <!-- text content -->
+         <div class="bg-dark p-1">
+            <h2 class="m-heading">Kes <span class="text-primary">Me</span> Oleme</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius necessitatibus possimus repudiandae! Corporis explicabo reprehenderit eum autem veniam ratione maxime, animi aspernatur reiciendis aliquam aut placeat porro dolorum voluptatum saepe?</p>
+            <h3>Meie Meeskond</h3>
+            <ul>
+                <li>Kaval Ants:Projektijuht</li>
+                <li>Puna Mütsike: Arendusjuht</li>
+                <li>Lumi Valguke: Konsultant</li>
+                <li>Jõulu Vana: Arendaja</li>
+            </ul>
+        </div>
+
+
+
+    </section>
 
     <!-- #clients -->
-    <section id="clients"></section>
+    <section id="clients">
+
+
+
+    </section>
 
     <!-- #contact -->
-    <section id="contact"></section>
+    <section id="contact">
+
+
+
+    </section>
 
     <!-- #footer -->
-    <footer id="footer"></footer>
+    <footer id="footer">
+
+
+
+    </footer>
   </body>
 </html>
