--- a/index.html
+++ b/index.html
@@ -79,44 +79,48 @@
     </section>
     <!-- #who -->
     <section id="who">
-        <!-- img -->
-        <div class="who-img"></div>
-        <!-- text content -->
-         <div class="bg-dark p-1">
-            <h2 class="m-heading">Kes <span class="text-primary">Me</span> Oleme</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius necessitatibus possimus repudiandae! Corporis explicabo reprehenderit eum autem veniam ratione maxime, animi aspernatur reiciendis aliquam aut placeat porro dolorum voluptatum saepe?</p>
-            <h3>Meie Meeskond</h3>
-            <ul>
-                <li>Kaval Ants:Projektijuht</li>
-                <li>Puna Mütsike: Arendusjuht</li>
-                <li>Lumi Valguke: Konsultant</li>
-                <li>Jõulu Vana: Arendaja</li>
-            </ul>
-        </div>
-
-
-
+      <!-- img -->
+      <div class="who-img"></div>
+      <!-- text content -->
+      <div class="bg-dark p-1">
+        <h2 class="m-heading">
+          Kes <span class="text-primary">Me</span> Oleme
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+          necessitatibus possimus repudiandae! Corporis explicabo reprehenderit
+          eum autem veniam ratione maxime, animi aspernatur reiciendis aliquam
+          aut placeat porro dolorum voluptatum saepe?
+        </p>
+        <h3>Meie Meeskond</h3>
+        <ul>
+          <li>Kaval Ants:Projektijuht</li>
+          <li>Puna Mütsike: Arendusjuht</li>
+          <li>Lumi Valguke: Konsultant</li>
+          <li>Jõulu Vana: Arendaja</li>
+        </ul>
+      </div>
     </section>
-
     <!-- #clients -->
     <section id="clients">
-
-
-
+      <div class="bg-light py-1">
+        <h2 class="m-heading text-center">
+          Meie <span class="text-primary">Kliendid</span>
+        </h2>
+        <div class="py-1 items">
+          <div><img src="./img/logo1.png" alt="Klient1" /></div>
+          <div><img src="./img/logo2.png" alt="Klient2" /></div>
+          <div><img src="./img/logo3.png" alt="Klient3" /></div>
+          <div><img src="./img/logo4.png" alt="Klient4" /></div>
+          <div><img src="./img/logo5.png" alt="Klient5" /></div>
+        </div>
+      </div>
     </section>
 
     <!-- #contact -->
-    <section id="contact">
-
-
-
-    </section>
+    <section id="contact"></section>
 
     <!-- #footer -->
-    <footer id="footer">
-
-
-
-    </footer>
+    <footer id="footer"></footer>
   </body>
 </html>
