Tegin kuni kontaktini, aga seal on mingi error

--- a/index.html
+++ b/index.html
@@ -116,10 +116,34 @@
         </div>
       </div>
     </section>
-
     <!-- #contact -->
-    <section id="contact"></section>
-
+    <section id="contact">
+        <!-- form -->
+         <div class="p-1 bg-primary contact-form">
+            <h2 class="m-heading">Võta Meiega Ühendust</h2>
+            <p>Täida all olev vorm</p>
+            <form action="#">
+                <div class="form-group">
+                    <label for="name">Nimi</label>
+                    <input type="text" id="name" placeholder="Sisesta oma nimi">
+                </div>
+                <div class="form-group">
+                    <label for="name">Email</label>
+                    <input type="email" id="email" placeholder="Sisesta oma e-mail">
+                </div>
+                <div class="form-group"></div>
+                    <label for="name">Telefon</label>
+                    <input type="phone" id="telefon" placeholder="Sisesta oma telefoni number">
+                </div>
+                <div class="form-group"></div>
+                    <label for="name">Sõnum</label>
+                    <textarea id="message" placeholder="Sisesta oma sõnum">
+                    </textarea>
+                </div>
+                <input type="submit" value="Saada">
+            </form>
+            </div>
+    </section>
     <!-- #footer -->
     <footer id="footer"></footer>
   </body>
