Tegin uue kausta nimega js, panin kaardi osa faili script.js

--- a/index.html
+++ b/index.html
@@ -7,23 +7,6 @@
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://kit.fontawesome.com/088e4b290a.js" crossorigin="anonymous"></script>
     <title>Company Web</title>
-    <script>
-      // Initialize and add the map
-      function initMap() {
-        // The location of Uluru
-        const uluru = { lat: 58.349451, lng: 26.714695 };
-        // The map, centered at Uluru
-        const map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 16, 
-          center: uluru,
-        });
-        // The marker, positioned at Uluru
-        const marker = new google.maps.Marker ({ 
-          position: uluru, 
-          map: map,
-        });
-      }
-    </script>
   </head>
   <body id="home">
     <!-- navbar -->
@@ -168,8 +151,8 @@
     <footer id="footer" class="bg-dark text-center py-1">
       <p>Kõik õigused on kaitstud &copy;2021</p>
     </footer>
-    <!-- map script --> 
-     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV2pFInywhL1gYa4uzI4YtsBENL6ddi2A&callback=initMap">
-      </script>
+    <!-- map script -->
+    <script src="js/script.js" async></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV2pFInywhL1gYa4uzI4YtsBENL6ddi2A&callback=initMap"></script>
   </body>
 </html>
