--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="showcase-content">
         <h1 class="l-heading">Lihtsalt Tee Midagi</h1>
         <p class="par">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
-          cumque.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Aspernatur,cumque.
         </p>
         <a href="#what" class="btn btn-primary">Loe Rohkem</a>
       </div>
@@ -130,11 +130,7 @@
           </div>
           <div class="form-group">
             <label for="name">Telefon</label>
-            <input
-              type="phone"
-              id="telefon"
-              placeholder="Sisesta oma telefoni number"
-            />
+            <input type="phone" id="telefon" placeholder="Sisesta oma telefoni number"/>
           </div>
           <div class="form-group">
             <label for="name">Sõnum</label>
@@ -146,7 +142,6 @@
       <!-- map -->
       <div id="map" class="contact-map"></div>
     </section>
-
     <!-- #footer -->
     <footer id="footer" class="bg-dark text-center py-1">
       <p>Kõik õigused on kaitstud &copy;2021</p>
