--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <body id="home">
     <!-- navbar -->
     <nav id="navbar">
-      <h1>
-        <span class="text-primary"><i class="fas fa-book-open"></i> FIR</span>
-        MA
-      </h1>
+      <h2>
+        <span class="text-primary"><i class="fas fa-book-open"></i> FIR</span> MA
+      </h2>
       <ul>
         <li><a href="#home">Avaleht</a></li>
         <li><a href="#what">Teenused</a></li>
@@ -130,7 +129,7 @@
           </div>
           <div class="form-group">
             <label for="name">Telefon</label>
-            <input type="phone" id="telefon" placeholder="Sisesta oma telefoni number"/>
+            <input type="tel" id="telefon" placeholder="Sisesta oma telefoni number"/>
           </div>
           <div class="form-group">
             <label for="name">Sõnum</label>
