--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- fas -->
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://kit.fontawesome.com/088e4b290a.js" crossorigin="anonymous"></script>
     <title>Company Web</title>
   </head>
   <body id="home">
-    <!-- navbar -->
+    <!-- Navigation Bar -->
     <nav id="navbar">
       <h2>
         <span class="text-primary"><i class="fas fa-book-open"></i> FIR</span> MA
@@ -22,7 +21,7 @@
         <li><a href="#contact">Kontakt</a></li>
       </ul>
     </nav>
-    <!-- header - showcase -->
+    <!-- Main Showcase Section -->
     <header id="showcase">
       <div class="showcase-content">
         <h1 class="l-heading">Lihtsalt Tee Midagi</h1>
@@ -33,7 +32,6 @@
         <a href="#what" class="btn btn-primary">Loe Rohkem</a>
       </div>
     </header>
-    <!-- #what -->
     <section id="what" class="bg-light py-1">
       <div class="container">
         <h2 class="m-heading text-center p-1">
@@ -73,11 +71,8 @@
         </div>
       </div>
     </section>
-    <!-- #who -->
     <section id="who">
-      <!-- img -->
       <div class="who-img"></div>
-      <!-- text content -->
       <div class="bg-dark p-1">
         <h2 class="m-heading">
           Kes <span class="text-primary">Me</span> Oleme
@@ -97,7 +92,6 @@
         </ul>
       </div>
     </section>
-    <!-- #clients -->
     <section id="clients">
       <div class="bg-light py-1">
         <h2 class="m-heading text-center">
@@ -112,9 +106,7 @@
         </div>
       </div>
     </section>
-    <!-- #contact -->
     <section id="contact">
-      <!-- form -->
       <div class="p-1 bg-primary contact-form">
         <h2 class="m-heading">Võta Meiega Ühendust</h2>
         <p>Täida all olev vorm</p>
@@ -138,14 +130,13 @@
           <input type="submit" value="Saada" class="btn btn-dark" />
         </form>
       </div>
-      <!-- map -->
+      <!-- Map Section -->
       <div id="map" class="contact-map"></div>
     </section>
-    <!-- #footer -->
     <footer id="footer" class="bg-dark text-center py-1">
       <p>Kõik õigused on kaitstud &copy;2021</p>
     </footer>
-    <!-- map script -->
+    <!-- Inline JavaScript for Google Maps -->
     <script src="js/script.js" async></script>
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV2pFInywhL1gYa4uzI4YtsBENL6ddi2A&callback=initMap"></script>
   </body>
